# nanobot

./: README.md  pyproject.toml
app/: __init__.py  __main__.py  config.py  main.py  models.py  storage.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  context.py  llm.py  runner.py  runtime.py  session.py  subagents.py  tools.py
app/domain/: __init__.py  persona.py  retrieval.py  scholar.py
tests/app/: test_digital_human_demo.py
